Tue Mar 27 11:31:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Fix conditional for previous patch.

Mon Mar 26 18:48:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Outflank copy-on-write problem on 9x by
	setting access mode to FILE_MAP_READ when read access is requested.

Sun Mar 25 20:12:21 2001  Christopher Faylor <cgf@cygnus.com>


	* dlfcn.cc (check_access): Eliminate.
	(check_path_access): Use passed in path_conv buf.
	(get_full_path_of_dll): Use passed in name buf to avoid a static.  Rip
	out most of the path checking since LoadLibrary will do all of this
	automatically.
	(dlopen): Set errno when appropriate (may not be compliant?).
	* environ.cc (posify): Don't pass in "native" path if it seems to
	actually be posix.

Thursday Mar 22 2001  Robert Collins <rbtcollins@hotmail.com>

	* fhandler.h (fhandler_dev_clipboard): Extend to support writing.
	* fhandler_clipboard.cc (fhandler_dev_clipboard::fhandler_dev_clipboard):
	Initialize new fields.  Open clipboard here.
	(fhandler_dev_clipboard::dup): New method.
	(fhandler_dev_clipboard::open): Accomodate new fields.  Register
	clipboard here, if appropriate.
	(set_clipboard): New function.  Moves buffer to clipboard.
	(fhandler_dev_clipboard::write): Truly implement clipboard writing.
	(fhandler_dev_clipboard::read): Reimplement to allow successive reads.
	(fhandler_dev_clipboard::lseek): Truly implement seeks in clipboard.
	(fhandler_dev_clipboard::close): Clear out new fields.

 Support sequential
	reads and sequential writes.  Support for binary data via a native
	clipboard format.

2001-03-22  Egor Duda  <deo@logos-m.ru>
  
	* fhandler_console.cc (fhandler_console::set_default_attr): Update
	console color attributes on tty reset.

Wed Mar 21 22:12:36 2001  Christopher Faylor <cgf@cygnus.com>

	* autoload.cc (kernel32_init): New function for kernel32 autoload
	initialization.
	(SignalObjectAndWait): Add conditional load of this function when it is
	available.
